--- a/trainingCalender/style/style.css
+++ b/trainingCalender/style/style.css
@@ -2,6 +2,9 @@
     margin: 0;
     padding: 0;
 }
+ul {
+    list-style: none;
+}
 header {
     background-color: tomato;
     display: flex;
@@ -9,6 +12,7 @@ header {
     align-items: center;
     padding: 15px 30px;
     color: #fff;
+    z-index: 99;
 }
 header h1 {
     font-weight: bold;
@@ -22,13 +26,16 @@ header a {
     font-weight: bold;
 }
 .calender-wrap {
-    width: 1200px;
-    height: 850px;
-    border: 1px solid;
+    width: 800px;
     margin: 40px auto;
 }
 .calender-overlay {
-    padding: 30px;
+    width: 100%;
+    height: 820px;
+    backdrop-filter: url(filters.svg#filter) blur(8px);
+    border-radius: 5px;
+    box-shadow:  8px 8px 16px #000,
+                -8px -8px 16px #000;
 }
 .month > div:first-child {
     text-align: center;
@@ -40,10 +47,11 @@ header a {
     font-size: 3rem;
 }
 .calender-content>table {
-    margin: 20px auto;
+    margin: 0 auto;
     border-collapse : collapse;
-    width: 900px;
+    width: 100%;
     border: 1px solid;
+    background-color: #fff;
 }
 .calender-content>table td {
     width: 130px;
@@ -69,4 +77,45 @@ header a {
 }
 .day {
     border: 1px solid;
+}
+.calender-wrap img{
+    z-index: -2;
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100vh;
+    overflow: hidden;
+}
+.modal {
+    position: absolute;
+    top: 0;
+    left: 0;
+    z-index: 8;
+    width: 100%;
+    height: 100vh;
+}
+.modal-overlay {
+    background-color: rgba(0, 0, 0, 0.3);
+    width: 100%;
+    height: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+.modal-content {
+    background-color: #fff;
+}
+.modal-header {
+    background-color: tomato;
+    display: flex;
+    justify-content: space-between;
+}
+.modal-header span {
+    color: #fff;
+}
+.modal-main {
+}
+.hiddenModal {
+    display: none;
 }
