--- a/trainingCalender/style/style.css
+++ b/trainingCalender/style/style.css
@@ -1,121 +1,98 @@
 * {
-    margin: 0;
-    padding: 0;
+  margin: 0;
+  padding: 0;
 }
 ul {
-    list-style: none;
+  list-style: none;
 }
 header {
-    background-color: tomato;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    padding: 15px 30px;
-    color: #fff;
-    z-index: 99;
+  background-color: tomato;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 15px 30px;
+  color: #fff;
+  z-index: 99;
 }
 header h1 {
-    font-weight: bold;
-    font-size: 3.2rem;
+  font-weight: bold;
+  font-size: 3.2rem;
 }
 header a {
-    text-decoration: none;
-    color: #fff;
-    padding: 0 15px;
-    font-size: 1.3rem;
-    font-weight: bold;
+  text-decoration: none;
+  color: #fff;
+  padding: 0 15px;
+  font-size: 1.3rem;
+  font-weight: bold;
 }
-.calender-wrap {
-    width: 800px;
-    margin: 40px auto;
+.calendar-wrap {
+  border: 1px solid #000000;
+  width: 800px;
+  margin: 50px auto 0;
+  padding: 20px;
+  box-sizing: border-box;
+  text-align: center;
+  border-radius: 8px;
 }
-.calender-overlay {
-    width: 100%;
-    height: 820px;
-    backdrop-filter: url(filters.svg#filter) blur(8px);
-    border-radius: 5px;
-    box-shadow:  8px 8px 16px #000,
-                -8px -8px 16px #000;
+.left,
+.date,
+.right {
+  display: inline-block;
 }
-.month > div:first-child {
-    text-align: center;
-    font-size: 1.5rem;
+.left > button,
+.right > button {
+  border: none;
+  padding: 10px 20px;
+  background-color: tomato;
 }
-.month > div:last-child {
-    display: flex;
-    justify-content: center;
-    font-size: 3rem;
+.year {
+  font-size: 30px;
+  font-weight: bold;
 }
-.calender-content>table {
-    margin: 0 auto;
-    border-collapse : collapse;
-    width: 100%;
-    border: 1px solid;
-    background-color: #fff;
+.month {
+  font-size: 26px;
 }
-.calender-content>table td {
-    width: 130px;
-    height: 90px;
+.calendar > table {
+  width: 100%;
+  border-collapse: collapse;
 }
-.calender-content>table tr:nth-child(2){
-    text-align: center;
-    font-size: 1.5rem;
-    font-weight: bold;
-    border-top: 1px solid #fff;
-    border-left: 1px solid #fff;
-    border-right: 1px solid #fff;
-    border-bottom: 1px solid;
+th,
+td {
+  padding: 8px;
+  font-size: 18px;
 }
-.calender-content>table tr:not(:nth-child(2)) td {
-    text-align: left;
-    vertical-align: top;
-    font-size: 1.2rem;
-    font-weight: bold;
-}
-.today {
-    background-color: tomato;
-}
-.day {
-    border: 1px solid;
-}
-.calender-wrap img{
-    z-index: -2;
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100vh;
-    overflow: hidden;
+th {
+  background-color: #c4c4c4;
 }
 .modal {
-    position: absolute;
-    top: 0;
-    left: 0;
-    z-index: 8;
-    width: 100%;
-    height: 100vh;
+  position: absolute;
+  top: 0;
+  left: 0;
+  z-index: 8;
+  width: 100%;
+  height: 100vh;
 }
 .modal-overlay {
-    background-color: rgba(0, 0, 0, 0.3);
-    width: 100%;
-    height: 100%;
-    display: flex;
-    align-items: center;
-    justify-content: center;
+  background-color: rgba(0, 0, 0, 0.3);
+  width: 100%;
+  height: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 .modal-content {
-    background-color: #fff;
+  background-color: #fff;
 }
 .modal-header {
-    background-color: tomato;
-    display: flex;
-    justify-content: space-between;
+  background-color: tomato;
+  display: flex;
+  justify-content: space-between;
 }
 .modal-header span {
-    color: #fff;
+  color: #fff;
 }
 .modal-main {
 }
 .hiddenModal {
-    display: none;
+  display: none;
 }
